Bug 315348 - The SPHINX backend accepts input models without grammar
Summary: The SPHINX backend accepts input models without grammar
Status: RESOLVED FIXED
Alias: None
Product: simon
Classification: Applications
Component: simond (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Grasch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-17 23:05 UTC by Peter Grasch
Modified: 2013-05-23 20:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Grasch 2013-02-17 23:05:17 UTC
The SPHINX backend will not outright reject models without grammar.

This leads to an obvious error later on when trying to initiate the recognition with the created model.

Reproducible: Always

Steps to Reproduce:
1. Select static model
2. Do not configure a grammar
Actual Results:  
Failed to initialize recognition

Expected Results:  
Should report "not ready"
Comment 1 Peter Grasch 2013-05-23 20:09:14 UTC
Git commit 04fd800cc576008791f2a8f6e5cf2dd9420ad75f by Peter Grasch.
Committed on 23/05/2013 at 22:07.
Pushed by grasch into branch 'master'.

Aborting model adaption on insufficient grammar / prompts

M  +14   -16   simonlib/speechmodelcompilation/modelcompilationadaptersphinx.cpp

http://commits.kde.org/simon/04fd800cc576008791f2a8f6e5cf2dd9420ad75f