Aborting model adaption on insufficient grammar / prompts

BUG: 315348