simonlib/speechmodelcompilation/modelcompilationadaptersphinx.cpp
@@ -66,9 +66,10 @@ bool ModelCompilationAdapterSPHINX::startAdaption(AdaptionType adaptionType, con
   //merging scenarios
   mergeInputData(scenarioPathsIn, mergedVocabulary, mergedGrammar);
 
-  if((adaptionType & ModelCompilationAdapter::AdaptLanguageModel) &&  mergedVocabulary->empty())
+  if ((adaptionType & ModelCompilationAdapter::AdaptLanguageModel) &&
+      (mergedVocabulary->empty() || (mergedGrammar->structureCount() == 0)))
   {
-    kDebug()<<"Empty vocabulary aborting adaptation";
+    kDebug() << "Empty vocabulary or grammar; aborting adaptation";
     emit adaptionAborted(ModelCompilation::InsufficientInput);
     return false;
   }
@@ -150,22 +151,19 @@ bool ModelCompilationAdapterSPHINX::storeModel(AdaptionType adaptionType, const 
 
   ADAPT_CHECKPOINT;
 
-  kDebug()<<"Store transcription & fields";
-  bool errorStoringTrainTS = !storeTranscriptionAndFields(adaptionType, promptsPathIn,
-                                                          fetc+TRAIN_TRANSCRIPTION,
-                                                          fetc+TRAIN_FIELDS,
-                                                          definedVocabulary, vocabulary);
-
-  bool errorStoringTestingTS = !storeTranscriptionAndFields(adaptionType, promptsPathIn,
-                                                            fetc+TEST_TRANSCRIPTION,
-                                                            fetc+TEST_FIELDS,
+  if (adaptionType & ModelCompilationAdapter::AdaptAcousticModel) {
+    kDebug()<<"Store transcription & fields";
+    bool err = !storeTranscriptionAndFields(adaptionType, promptsPathIn,
+                                                            fetc+TRAIN_TRANSCRIPTION,
+                                                            fetc+TRAIN_FIELDS,
                                                             definedVocabulary, vocabulary);
 
-  if(!(adaptionType == ModelCompilationAdapter::AdaptLanguageModel) &&
-     (errorStoringTrainTS || errorStoringTestingTS ))
-  {
-    emit error(i18n("Failed to store transcription and fields"));
-    return false;
+    err = err && storeTranscriptionAndFields(adaptionType, promptsPathIn,
+                                                                fetc+TEST_TRANSCRIPTION,
+                                                                fetc+TEST_FIELDS,
+                                                                definedVocabulary, vocabulary);
+    if (!err)
+        return false; // error reporting done by the function itself
   }
 
   ADAPT_CHECKPOINT;
